--- a/src/css/components/_hero.scss
+++ b/src/css/components/_hero.scss
@@ -66,6 +66,6 @@
   }
 
   .landing--floating .hero {
-    padding: 30px 16px 120px 16px;
+    padding: 30px 16px 100px 16px;
   }
 }
