--- a/src/css/components/_landing.scss
+++ b/src/css/components/_landing.scss
@@ -7,7 +7,7 @@
     &--floating {
       .landing__content {
         position: relative;
-        top: -120px;
+        top: -70px;
       }
     }
   }
